# Filling-missing-data-using-interpolation

./: CMakeLists.txt  README.md  main.cpp  regresion.sln
Data/: SI-Task1-Data6.txt  SI-Task2-Data2.txt  SI-Task3-Data3.txt
Inc/: CubicSplineInterpolation.hpp  LagrangePolynomialInterpolation.hpp  LinearInterpolation.hpp
Libs/CubicSplineInterpolation/: CMakeLists.txt
Libs/CubicSplineInterpolation/Inc/: CubicSplineInterpolation.hpp
Libs/CubicSplineInterpolation/Src/: CubicSplineInterpolation.cpp
Libs/CubicSplineInterpolation/Tests/: CMakeLists.txt  CubicSplineInterpolation_tests.cpp
Libs/Cubicspline/: CMakeLists.txt
Libs/Cubicspline/Inc/: Cubicspline.hpp
Libs/Cubicspline/Src/: Cubicspline.cpp
Libs/Cubicspline/Tests/: CMakeLists.txt  Cubicspline_tests.cpp
Libs/LagrangePolynomialInterpolation/: CMakeLists.txt
Libs/LagrangePolynomialInterpolation/Inc/: LagrangePolynomialInterpolation.hpp
Libs/LagrangePolynomialInterpolation/Src/: LagrangePolynomialInterpolation.cpp
Libs/LagrangePolynomialInterpolation/Tests/: CMakeLists.txt  LagrangePolynomialInterpolation_tests.cpp
Libs/LinearInterpolation/: CMakeLists.txt
Libs/LinearInterpolation/Inc/: LinearInterpolation.hpp
Libs/LinearInterpolation/Tests/: CMakeLists.txt  LineInterpolation_tests.cpp
Libs/Linspain/: CMakeLists.txt
Libs/Linspain/Inc/: Linspain.hpp
Libs/Linspain/Src/: Linspain.cpp
Libs/Spline/: CMakeLists.txt
Libs/Spline/Inc/: Spline.hpp
Libs/Spline/Src/: Spline.cpp
Src/: CubicSplineInterpolation.cpp  LinearInterpolation.cpp
Tests/: CubicSplinelInterpolation_tests.cpp
regresion/: regresion.cpp  regresion.vcxproj  regresion.vcxproj.filters
